# minishell

./: .gitignore  README.md  meson.build  meson_options.txt
.devcontainer/: Dockerfile  devcontainer.json
include/: clean.h  command.h  errors.h  minishell.h  string.h  token.h
src/: main.c
src/lib/: clean.c  lexer.c  print_errors.c  string.c
